<?xml version="1.0"?>
<package>
  <name>gnss_status_viewer</name>
  <version>0.1.0</version>
  <description>GNSS Status Viewer</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/tado-aev/gnss_status_viewer</url>

  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nmea_msgs</run_depend>
</package>
